Adding logo from pipe

--- a/public/menu/menu.html
+++ b/public/menu/menu.html
@@ -2,7 +2,9 @@
     <div class="main-nav">
         <div id="top">
             <div id="top-left">
-                <span>APLICALE!</span>
+                <span ui-sref="schools">
+                    <img src="../content/images/logo.png">
+                </span>
             </div>
             <div id="top-right">{{user ? user : 'Iniciar Sesion'}}</div>
         </div>
